--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>REM Construcciones</title>
-  <meta name="description" content="Una landing page para emprendimientos de barrios cerrados, inversiones inmobiliarias y construcción">
+  <meta name="description" content="Emprendimientos de barrios cerrados, inversiones inmobiliarias y construcción">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
