--- a/index.html
+++ b/index.html
@@ -66,8 +66,12 @@
       <li data-target="#carouselExample" data-slide-to="2"></li>
       <!-- Add more indicators for additional images -->
     </ol>
+
     <div class="carousel-inner">
       <div class="carousel-item active">
+        <img src="https://res.cloudinary.com/dyetlrz2w/image/upload/v1695694214/DESTACADAS_800_600_px_bmfrjh.png" class="d-block w-100 img-fluid" alt="Image 1">
+      </div>
+      <div class="carousel-item">
         <img src="https://res.cloudinary.com/dyetlrz2w/image/upload/v1693784025/IMG_3036_meu0ur.jpg" class="d-block w-100 img-fluid" alt="Image 1">
       </div>
       <div class="carousel-item">
@@ -75,6 +79,9 @@
       </div>
       <div class="carousel-item">
         <img src="https://res.cloudinary.com/dyetlrz2w/image/upload/v1693784025/IMG_3014_m9pukq.jpg" class="d-block w-100 img-fluid" alt="Image 3">
+      </div>
+      <div class="carousel-item">
+        <img src="https://res.cloudinary.com/dyetlrz2w/image/upload/v1695694214/DESTACADAS_800_600_px_bmfrjh.png" class="d-block w-100 img-fluid" alt="Image 2">
       </div>
       <div class="carousel-item">
         <img src="https://res.cloudinary.com/dyetlrz2w/image/upload/v1693785337/Sin_t%C3%ADtulo_1_zsqoxp.png" class="d-block w-100 img-fluid" alt="Image 4">
@@ -86,6 +93,9 @@
         <img src="https://res.cloudinary.com/dyetlrz2w/image/upload/v1693785336/23376269_563441750715787_8653001603810660767_n_kjlmbh.jpg" class="d-block w-100 img-fluid" alt="Image 6">
       </div>
       <div class="carousel-item">
+        <img src="https://res.cloudinary.com/dyetlrz2w/image/upload/v1695694214/DESTACADAS_800_600_px_bmfrjh.png" class="d-block w-100 img-fluid" alt="Image 2">
+      </div>
+      <div class="carousel-item">
         <img src="https://res.cloudinary.com/dyetlrz2w/image/upload/v1693785667/33865983_668503476876280_3334737768256372736_n_khvn92.jpg" class="d-block w-100 img-fluid" alt="Image 7">
       </div>
       <div class="carousel-item">
@@ -93,6 +103,9 @@
       </div>
       <div class="carousel-item">
         <img src="https://res.cloudinary.com/dyetlrz2w/image/upload/v1693785667/31933660_2011889809075906_6890573576668184576_n_ggqnvn.jpg" class="d-block w-100 img-fluid" alt="Image 9">
+      </div>
+      <div class="carousel-item">
+        <img src="https://res.cloudinary.com/dyetlrz2w/image/upload/v1695694214/DESTACADAS_800_600_px_bmfrjh.png" class="d-block w-100 img-fluid" alt="Image 2">
       </div>
       <div class="carousel-item">
         <img src="https://res.cloudinary.com/dyetlrz2w/image/upload/v1693785876/IMG_2563_lo6hlx.jpg" class="d-block w-100 img-fluid" alt="Image 10">
